I resolved the button breaking into two while on mobile
I resolved the button breaking into two while on mobile

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -220,6 +220,7 @@ body {
   background-color: #bc4749;
   color: #edf6f9;
   align-self: end;
+  white-space: nowrap;
   padding: 1.2rem;
 }
 
